# Grocify

./: .gitignore  README.md  app.json  global.css  package-lock.json  package.json  tailwind.config.js  themes.css
Grocify-backend/: .env.example  Dockerfile  README.md  agent.py  crud.py  database.py  db_models.py  main.py  models.py  pyproject.toml  redis_session.py  requirements.txt  tools.py
src/app/: _layout.tsx
src/app/(auth)/: sign-in.tsx
src/app/(tabs)/: _layout.tsx  index.tsx  insights.tsx  planner.tsx
src/app/api/items/: [id]+api.ts  clear-purchase+api.ts  index+api.ts
src/app/hooks/: useSocialAuth.ts
src/components/: CustomAlert.tsx  TabScreenBackground.tsx
src/components/List/: CompletedItems.tsx  ListHeroCard.tsx  PendingItemCard.tsx
src/components/ai-agent/: AIAgentFAB.tsx  AIAgentModal.tsx  AIAgentModalLoader.tsx  MessageBubble.tsx
src/components/insights/: SentryFeebackButton.tsx
src/components/planner/: PlannerFormCard.tsx  PlannerHeroImage.tsx
src/lib/: notifications.ts
src/lib/server/db/: client.ts  db-actions.ts
src/services/: ai-agent-api.ts  grocery-api.ts
src/store/: grocery-store.ts
src/types/: ai-agent.ts
